# NeuVC

./: .gitignore  CMakeLists.txt  README.md
Lib/Components/: UIDefines.h
Lib/DSP/: Resampler.cpp  Resampler.h
Lib/Utils/: AudioUtils.cpp  AudioUtils.h
NeuVC/PluginSources/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorBase.cpp
NeuVC/Source/: Player.cpp  Player.h  SourceAudioManager.cpp  SourceAudioManager.h
NeuVC/Source/Components/: AudioContainer.cpp  AudioContainer.h  AudioFileDrag.cpp  AudioFileDrag.h  AudioFileWriter.cpp  AudioFileWriter.hpp  AudioRegion.cpp  AudioRegion.h  MidiFileDrag.cpp  MidiFileDrag.h  NeuVCLNF.cpp  NeuVCLNF.h  NeuVCMainView.cpp  NeuVCMainView.h  Playhead.cpp  Playhead.h
NeuVC/Source/Components/Views/: VisualizationPanel.cpp  VisualizationPanel.h
NeuVC/Source/RVC/: rvc.cpp  rvc.h
rvc_tracer/: trace_model.py
rvc_tracer/infer/lib/infer_pack/: attentions.py
rvc_tracer/infer/lib/jit/: __init__.py  get_synthesizer.py
rvc_tracer/traced/: models.py
